# pult-desktop

./: .gitignore  README.md  install.ps1  install.sh  package-lock.json  package.json  pult.module.yaml  pult.yaml
.github/workflows/: ci.yml  release.yml
docs/: design-language.md  roadmap.md  run-journal.md
scripts/: fetch-pult-sidecar.mjs
src-tauri/: Cargo.toml  sidecar.json  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  journal.rs  lib.rs  main.rs  pult_bin.rs  types.rs
src-tauri/tests/: path_env_fix.rs  pult_backend.rs
src-tauri/tests/fixtures/repo/: pult.yaml
src-tauri/tests/fixtures/repo/mods/aws/: pult.module.yaml
src/lib/: ansi.test.ts  ansi.ts  api.ts  grouping.ts  levelSlew.ts  meterLiveness.ts  readiness.ts  reconcile.test.ts  reconcile.ts  stages.ts  tailGen.test.ts  tailGen.ts  time.ts  tower.ts  types.ts
src/lib/components/: Board.svelte  CommandCard.svelte  CommandDetail.svelte  EmptyState.svelte  Lamp.svelte  Meter.svelte  OutputPane.svelte  ParamField.svelte  Rack.svelte  RunView.svelte  SettingsModal.svelte  Sidebar.svelte  Toolbar.svelte  Tower.svelte  TrustModal.svelte
src/lib/mock/: backend.ts  fixtures.ts  paramStore.ts  rackStore.ts
src/lib/real/: backend.ts  paramStore.ts  rackStore.ts
src/lib/styles/: crt.css  fonts.css  global.css  tokens.css
src/routes/: +layout.svelte  +page.svelte
