[package]
name = "pult-desktop"
version = "0.1.1"
description = "Desktop companion for pult — run repository commands through a form, not flags."
authors = ["Lonic Software"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pult_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
which = "8.0.5"
tokio = { version = "1.52.3", features = ["process", "io-util", "rt", "macros", "time"] }

[dev-dependencies]
tempfile = "3.27.0"

