[package]
name = "pult-desktop"
version = "0.2.2"
description = "Desktop companion for pult — run repository commands through a form, not flags."
authors = ["Lonic Software"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pult_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
which = "8.0.5"
tokio = { version = "1.52.3", features = ["process", "io-util", "rt", "macros", "time"] }
# Run-journal reader (src/journal.rs): same repo-key hash and state-dir
# resolution as pult's own writer (tui repo's src/journal.rs), so both sides
# agree on where a repo's journal lives without either being a source of
# truth for the other.
sha2 = "0.10"
dirs = "6"
# Not on crates.io (git-only, version 0.0.0) — pinned to the tip of `dev` as
# of this writing. Repairs PATH from the user's login shell on macOS/Linux
# (GUI launches inherit launchd's/desktop-session's minimal PATH, not the
# shell's) and fixes a Windows PATH-inheritance bug in
# `std::process::Command`; see src-tauri/src/lib.rs's call site.
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }

[dev-dependencies]
tempfile = "3.27.0"
# `tauri::test::mock_app` (journal.rs's tail_run regression test) — resolver
# v2 (default for this crate's edition = "2021") keeps this feature scoped to
# test/bench/example builds, so it never reaches the production binary.
tauri = { version = "2", features = ["test"] }

